# NTMDTRead

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg  setup.py
NTMDTRead/: NTMDTReader.py  NTMDTReaderTSV.py  colors.py  kaitaiParseBase.py  nt_mdt.py  nt_mdt_pal.py  units.txt  utils.py
NTMDTRead/kaitai/: nt_mdt.py  nt_mdt_256.py  nt_mdt_color_table.py  nt_mdt_pal.py
NTMDTRead/palettes/: __init__.py
examples/: show.py
